<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- misc -->
	<string name="homepage">http://github.com/mjem</string>
	<string name="app_name">Carrie remote control</string>
	<string name="title">Carrie remote control</string>
	<string name="menu_options">Options</string>
	<string name="menu_back">Back</string>
   	<string name="menu_exit">Exit</string>

	<!-- Preferences -->
   	<string name="pref_title">Carrie remote control settings</string>
   	<string name="pref_cat_scan">Auto connection</string>
   	<string name="pref_cat_connection">Manual connection</string>
   	<string name="pref_cat_ui">User Interface</string>
   	<string name="pref_cat_about">About</string>
   	<string name="pref_scan">Scan</string> <!-- refered to in activity -->
   	<string name="pref_server">Server address</string>
   	<string name="pref_port">Port</string>
   	<string name="pref_small_skip">Small skip</string>
   	<string name="pref_large_skip">Large skip</string>
   	<string name="pref_about_name">Carrie Remote Control</string>
   	<string name="pref_about_homepage">Homepage</string> <!-- refered to in activity -->

	<!-- application labels -->
	<string name="pause">Pause/play</string>
	<string name="backward">Backward</string>
	<string name="forward">Forward</string>
	<string name="bbackward">Skip back</string>
	<string name="fforward">Skip forward</string>
	<string name="mute">Mute</string>
	<string name="voldown">Volume down</string>
	<string name="volup">Volume up</string>
	<string name="osdon">OSD on</string>
	<string name="osdoff">OSD off</string>
	<string name="fullscreen">Full screen</string>
	<string name="audlang">Audio Lang</string>
	<string name="sublang">Sub lang</string>
	<string name="subtitles">Subtitles</string>
	<string name="status">status: </string>

</resources>
